--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,9 @@
 @import './common';
 @import './example';
+@import './variables';
+@import './mixin';
+@import './layouts';
+@import './top-btn';
+@import "./form";
+@import './gallery';
+@import './spinner';
